--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 body {
   font-family: "Arial", sans-serif;
-  background-color: #f4f4f4;
+  background-color: rgba(53, 174, 75, 0.7450980392);
   color: #333;
   line-height: 1.6;
 }
