--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,14 @@ body {
 /* Buttons, cards, modals etc. */
 .button {
   background-color: #3498db;
-  color: white;
+  color: rgb(212, 26, 26);
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 8px;
   cursor: pointer;
 }
 .button:hover {
-  background-color: rgb(33.1380753138, 125.1882845188, 186.8619246862);
+  background-color: #217dbb;
 }
 
 .card {
@@ -66,4 +66,53 @@ body {
   transition: transform 0.3s ease;
 }
 
-/*# sourceMappingURL=style.css.map */
+nav {
+  background: #6fab42;
+  border-bottom: 1px solid #ddd;
+  padding: 0.5rem 1rem;
+  position: relative;
+}
+nav .menu-toggle {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
+  align-items: center;
+}
+nav ul li a {
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  display: block;
+}
+@media (max-width: 768px) {
+  nav .menu-toggle {
+    display: block;
+  }
+  nav ul {
+    display: none;
+    flex-direction: column;
+    gap: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #44117d;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  nav ul.open {
+    display: flex;
+  }
+  nav ul li a {
+    padding: 1rem;
+    border-top: 1px solid #ddd;
+  }
+}/*# sourceMappingURL=style.css.map */
