--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -45,11 +45,12 @@ nav {
       top: 100%;
       left: 0;
       width: 100%;
-      background: #44117d;
+      background: #44d873;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
       &.open {
         display: flex;
+        opacity: 0.9;
       }
   
       li a {
