--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,23 +1,26 @@
-@use "sass:color";
+@use 'sass:color';
 @use 'base' as *; // Подключаем _base.scss и делаем его переменные глобальными
 /* Buttons, cards, modals etc. */
 
-.button {
-  background-color: $primary-color;
-  color: rgb(212, 26, 26);  
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 8px;
-  cursor:    pointer;
-
-  &:hover {
-    background-color: color.adjust($primary-color, $lightness: -10%);
-  }
-}
-  
 .card {
   background: white;
   border-radius: 12px;
   padding: 1rem;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+//секция превью
+.preview-image {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+#preview-сontainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 20px;
 }
